[project]
name = "mastering-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.51.0",
    "google-generativeai>=0.8.5",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.0",
    "openai>=2.8.0",
    "streamlit>=1.51.0",
]
